<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.SetInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/set_info_toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        app:title="@string/setInfo"
        app:titleTextColor="@color/white" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:columnCount="2">

        <TextView android:text="@string/phoneNum" />

        <EditText
            android:id="@+id/set_info_phone"
            android:layout_columnWeight="1"
            android:inputType="phone" />

        <TextView android:text="@string/accountNum" />

        <EditText
            android:id="@+id/set_info_account"
            android:layout_columnWeight="1" />

        <TextView android:text="@string/name" />

        <EditText
            android:id="@+id/set_info_name"
            android:layout_columnWeight="1" />

        <TextView android:text="@string/sex"
            android:layout_marginTop="15dp"/>

        <RadioGroup
            android:layout_marginTop="10dp"
            android:id="@+id/set_info_sex"
            android:layout_columnWeight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/set_info_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:layout_marginStart="10dp"
                android:id="@+id/set_info_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>
    </GridLayout>

    <Button
        android:id="@+id/set_info_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/btn_orange_bg"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>