<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.SetPublishActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/set_publish_toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        app:title="@string/publish"
        app:titleTextColor="@color/white" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:columnCount="2">

        <TextView
            android:text="@string/driver"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/set_publish_driver"
            android:layout_columnWeight="1"
            android:inputType="text" />

        <TextView
            android:text="@string/license"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/set_publish_license"
            android:layout_columnWeight="1"
            android:inputType="text" />

        <TextView
            android:layout_height="match_parent"
            android:text="@string/type"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/set_publish_type"
            android:layout_columnWeight="1"
            android:inputType="text" />

        <TextView
            android:text="@string/freeDate"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/set_publish_freeDate"
            android:layout_columnWeight="1"
            android:inputType="datetime" />

        <TextView
            android:text="@string/freeTime"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/set_publish_freeTime"
            android:layout_columnWeight="1"
            android:inputType="datetime" />
    </GridLayout>

    <Button
        android:id="@+id/set_publish_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/btn_bg_blue"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>