<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        app:title="@string/certifyPhone"
        app:titleTextColor="@color/white" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:columnCount="5"
        android:padding="20dp"
        android:rowCount="2">

        <TextView
            android:id="@+id/login_phone_head"
            android:layout_marginTop="5dp"
            android:text="@string/head"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_account"
            android:layout_column="1"
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@color/pageBg"
            android:hint="@string/phone"
            android:inputType="phone" />

        <TextView
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/code"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_code"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@color/pageBg"
            android:hint="@string/inputCode"
            android:inputType="number" />

        <Button
            android:id="@+id/register_getCode"
            android:layout_height="30dp"
            android:background="@drawable/btn_getcode_bg"
            android:text="@string/getCode"
            android:textColor="@color/white" />
    </GridLayout>

    <Button
        android:id="@+id/register_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg_blue"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>