<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBg"
    android:orientation="vertical"
    tools:context=".View.SetPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/set_password_toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        app:title="@string/setPassword"
        app:titleTextColor="@color/white" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:columnCount="3">

        <TextView
            android:text="@string/password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/set_password"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginStart="10dp"
            android:background="@color/pageBg"
            android:hint="@string/inputPassword"
            android:inputType="textPassword" />


        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/checkPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/set_password_check"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/pageBg"
            android:hint="@string/retryPassword"
            android:inputType="textPassword" />

    </GridLayout>

    <Button
        android:id="@+id/set_password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/btn_bg_blue"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>