<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBg"
    android:orientation="vertical"
    tools:context=".View.MyReservationActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/myReservation_toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        app:title="@string/myReservation"
        app:titleTextColor="@color/white" />

    <android.support.design.widget.TabLayout
        android:id="@+id/myReservation_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <android.support.design.widget.TabItem
            android:id="@+id/reservation_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_reservation" />

        <android.support.design.widget.TabItem
            android:id="@+id/reservation_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ing_reservation" />

        <android.support.design.widget.TabItem
            android:id="@+id/reservation_ing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_reservation" />
    </android.support.design.widget.TabLayout>

    <ListView
        android:id="@+id/myReservation_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:scrollbars="none"/>
</LinearLayout>