<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBg"
    android:orientation="vertical"
    tools:context=".View.AccountFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/account_userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/blue"
        android:backgroundTint="@color/white"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/account_favicon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/favicon_one" />

        <TextView
            android:id="@+id/account_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/account_favicon"
            android:text="张三"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_reservation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/account_iv_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_revise" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/account_iv_reservation"
            android:gravity="center_vertical"
            android:text="@string/myReservation"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_publish"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/account_iv_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_edit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/account_iv_publish"
            android:gravity="center_vertical"
            android:text="@string/release"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_aboutUs"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/account_iv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_heart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/account_iv_about"
            android:gravity="center_vertical"
            android:text="@string/aboutUs"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_arrow" />
    </RelativeLayout>

    <Button
        android:id="@+id/account_logout"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_orange_bg"
        android:text="@string/logout"
        android:textSize="18sp"
        android:textColor="@color/white" />
</LinearLayout>