<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pageBg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/item_reservation_iv_icon"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/item_reservation_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/item_reservation_iv_icon"
                android:text="李师傅"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_reservation_tv_licensePlates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/item_reservation_tv_name"
                android:layout_below="@id/item_reservation_tv_name"
                android:text="车牌:闽D1234"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_reservation_tv_carType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/item_reservation_tv_licensePlates"
                android:layout_below="@id/item_reservation_tv_licensePlates"
                android:text="玛莎拉蒂"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_reservation_tv_freeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/item_reservation_tv_licensePlates"
                android:layout_below="@id/item_reservation_tv_carType"
                android:text="空闲时间：2018-05-19 18：30-20：50"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_reservation_tv_status"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/btn_bg_blue"
                android:gravity="center"
                android:text="@string/ing_reservation"
                android:textColor="@color/white" />


        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line" />

        <RelativeLayout
            android:id="@+id/item_reservation_rl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/item_reservation_tv_rentalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rentalTime" />

            <TextView
                android:id="@+id/item_reservation_tv_rentalPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/reservationPhone" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>